--- a/client/package.json
+++ b/client/package.json
@@ -11,22 +11,32 @@
     "proxy": "http://localhost:3000"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@tanstack/react-query": "^4.35.7",
     "@tanstack/react-query-devtools": "^4.35.7",
+    "axios": "^1.6.0",
+    "chart.js": "^4.4.0",
+    "clsx": "^2.0.0",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
+    "tabler-icons-react": "^1.56.0",
+    "universal-cookie": "^6.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.5",
     "@types/lodash": "^4.14.199",
     "@types/react": "^18.2.15",
+    "@types/react-beautiful-dnd": "^13.1.6",
+    "@types/react-datepicker": "^4.19.1",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
