--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
@@ -38,6 +39,7 @@
     "@types/lodash": "^4.14.199",
     "@types/react": "^18.2.15",
     "@types/react-beautiful-dnd": "^13.1.6",
+    "@types/react-csv": "^1.1.8",
     "@types/react-datepicker": "^4.19.1",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
