--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc -p .",
+    "build": "tsc -p . && ncp public dist/public",
     "test:db": "ts-node src/config/database.ts"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/nodemailer": "^6.4.14",
+    "ncp": "^2.0.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
