added public folder

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "dist/**/*.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    { "src": "/public/(.*)", "dest": "dist/public/$1" },
-    { "src": "/(.*)", "dest": "dist/index.js" }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/" }],
+  "outputDirectory": "dist"
 }
