--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
-  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }],
-  "outputDirectory": "dist"
+  "builds": [],
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
