--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc -p . && ncp public dist/public",
+    "build": "tsc -p .",
     "test:db": "ts-node src/config/database.ts"
   },
   "keywords": [],
