remove  public folder

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
-  "builds": [],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/" }],
+  "output": {
+    "root": "dist"
+  }
 }
