remove  public folder

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,6 +3,8 @@
   "builds": [{ "src": "*.js", "use": "@vercel/node" }],
   "routes": [{ "src": "/(.*)", "dest": "/" }],
   "functions": {
-    "output": "dist"
+    "output": {
+      "distDir": "dist"
+    }
   }
 }
