--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,10 +1,8 @@
 {
   "version": 2,
-  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }],
-  "functions": {
-    "output": {
-      "distDir": "dist"
-    }
-  }
+  "builds": [
+    { "src": "*.js", "use": "@vercel/node" },
+    { "src": "public/**/*", "use": "@vercel/static" }
+  ],
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
