--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@tabler/icons-react": "^2.41.0",
     "@tanstack/react-query": "^4.35.7",
     "@tanstack/react-query-devtools": "^4.35.7",
     "axios": "^1.6.0",
@@ -29,7 +30,6 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
-    "tabler-icons-react": "^1.56.0",
     "universal-cookie": "^6.1.1",
     "vite-plugin-rewrite-all": "^1.0.1",
     "zod": "^3.22.4"
